--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-    <div id="grid-container"></div>
+    <div id="title-container">
+        <h1 id="title">SKETCHPAD</h1>
+    </div>
+    <div id="grid-container">
+
+    </div>
 </body>
 
 </html>
