Add gap between square divs in grid

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div id="title-container">
         <h1 id="title">SKETCHPAD</h1>
     </div>
-    <div id="grid-container">
 
-    </div>
+    <div id="grid-container"></div>
+
+    <div id="grid-size-slider"></div>
 </body>
 
 </html>
