--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="grid-container"></div>
 
         <div id="grid-size-slider">
-            <p id="current-size">current size: </p>
+            <p id="current-size"></p>
             <input type="range" min="1" max="100" value="50" class="slider" id="size-slider">
             <p>change the size of the sketchpad</p>
             <p id="size-change-warning">
