--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SKETCHPAD</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/sketch-logo.svg">
     <link rel="stylesheet" href="./style.css">
     <script src="./app.js" defer></script>
 </head>
@@ -26,7 +27,6 @@
         <div id="grid-size-slider">
             <p id="current-size"></p>
             <input type="range" min="1" max="100" value="50" class="slider" id="size-slider">
-            <p>change the size of the sketchpad</p>
             <p id="size-change-warning">
                 WARNING:<br>Changing the size will erase the current sketch!
             </p>
