--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <div id="app-container">
         <div id="grid-buttons">
-            <button type="button">Rainbow trail</button>
-            <button type="button">Shading trail</button>
+            <button type="button" id="normal">NORMAL</button>
+            <button type="button" id="rainbow">RAINBOW</button>
+            <button type="button" id="shade">SHADE</button>
         </div>
 
         <div id="grid-container"></div>
