Add random color trail button functionality

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="app-container">
         <div id="grid-buttons">
             <button type="button" id="normal">NORMAL</button>
+            <button type="button" id="random">RANDOM</button>
             <button type="button" id="rainbow">RAINBOW</button>
             <button type="button" id="shade">SHADE</button>
         </div>
