Add eraser button functionality

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button type="button" id="random">RANDOM</button>
             <button type="button" id="rainbow">RAINBOW</button>
             <button type="button" id="shade">SHADE</button>
+            <button type="button" id="eraser">ERASER</button>
         </div>
 
         <div id="grid-container"></div>
