Add reset sketch functionality

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 
     <div id="app-container">
         <div id="grid-buttons">
-            <button type="button" id="normal">NORMAL</button>
-            <button type="button" id="random">RANDOM</button>
-            <button type="button" id="rainbow">RAINBOW</button>
-            <button type="button" id="shade">SHADE</button>
-            <button type="button" id="eraser">ERASER</button>
+            <button type="button" class="btn" id="normal">NORMAL</button>
+            <button type="button" class="btn" id="random">RANDOM</button>
+            <button type="button" class="btn" id="rainbow">RAINBOW</button>
+            <button type="button" class="btn" id="shade">SHADE</button>
+            <button type="button" class="btn" id="eraser">ERASER</button>
         </div>
 
         <div id="grid-container"></div>
 
         <div id="grid-size-slider">
+            <button type="button" class="btn" id="reset">RESET</button>
             <p id="current-size"></p>
             <input type="range" min="1" max="100" value="50" class="slider" id="size-slider">
             <p id="size-change-warning">
