Add title to the color-picker-container

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="app-container">
         <div id="grid-buttons">
-            <div id="color-picker-container">
+            <div title="Click the box to choose a color" id="color-picker-container">
                 <input type="color" id="color-picker" name="choose-color" value="#000000">
                 <label for="choose-color">Choose a color</label>
             </div>
